+ 节点构造器